2009-04-05  Krzysztof Foltman  <kfoltman@users.sf.net>

	* FSM/PanzerDelay/Delay.cpp:
	* FSM/WahMan/WahMan.cpp:
	  Clean up, fix a potentially huge bug in PanzerDelay.

2009-04-05  Krzysztof Foltman  <kfoltman@users.sf.net>

	* FSM/Infector/Infector.cpp:
	* FSM/Infector/Vegetable.cpp:
	* FSM/Kick/Kick.cpp:
	  Clean up a bit.

2009-04-05  Stefan Kost  <ensonic@users.sf.net>

	* configure.ac:
	  Add --enable-debug which is a kind of "developer-mode". Among other things
	  it turns compile warnings into errors.

	* FSM/ArpMan/ArpMan.cpp:
	* FSM/Chorus/Chorus.cpp:
	* FSM/Chorus2/Chorus2.cpp:
	* FSM/Infector/Filters.cpp:
	* FSM/dspchips/DSPChips.h:
	* common/dsplib/dsplib.cpp:
	  Fix a first batch of warnings.

2009-03-13  Stefan Kost  <ensonic@users.sf.net>

	* FSM/Kick/Kick.cpp:
	* FSM/PanzerDelay/Delay.cpp:
	  Don't access uninitialized values.

2009-02-25  Stefan Kost  <ensonic@users.sf.net>

	* Makefile.am:
	* autogen.sh:
	* common/dsplib.h:
	* m4/shave.m4:
	* shave-libtool.in:
	* shave.in:
	  Update shave.

2009-02-20  Stefan Kost  <ensonic@users.sf.net>

	* configure.ac:
	* m4/shave.m4:
	* shave-libtool.in:
	* shave.in:
	* m4/shave.m4 (added):
	* shave.in (added):
	* shave-libtool.in (added):
	  Have a less verbose build.

2009-02-18  Stefan Kost  <ensonic@users.sf.net>

	* README:
	  More instructions.

	* configure.ac:
	  Strip newline.

2009-01-13  Krzysztof Foltman  <kfoltman@users.sf.net>

	* FSM/Makefile.am:
	* FSM/WahMan:
	* FSM/WahMan/Makefile.am:
	* FSM/WahMan/WahMan.cpp:
	* FSM/dspchips/DSPChips.h:
	* configure.ac:
	  Add ported WahMan.

2008-12-30  Stefan Kost  <ensonic@users.sf.net>

	* Makefile.am:
	* autogen.sh:
	* configure.ac:
	* m4 (added):
	  Make use of a macro dir.

2008-12-27  Stefan Kost  <ensonic@users.sf.net>

	* configure.ac:
	  Use more automake features.

2008-12-26  Stefan Kost  <ensonic@users.sf.net>

	* HACKING:
	  Add more info.

	* configure.ac:
	  Run 'autoupdate' on configure.ac.

2008-12-08  Stefan Kost  <ensonic@users.sf.net>
